metadata/force-app/main/default/objects/CustomName_DGsff__c/CustomName_DGsff__c.object-meta.xml
<CustomObject>
    <description>Description_rQqXu</description>
    <label>CustomLabel_znSBv</label>
    <nameField>
        <label>CustomLabel_znSBv</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_znSBvs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>