metadata/force-app/main/default/objects/CustomName_DGsff__c/fields/CustomField_CqmuA__c.field-meta.xml
<CustomField>
    <fullName>CustomField_CqmuA__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldJwWDP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>